add close button and min button image and function

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
             <div id="title">
                 Our Code World Frameless (But draggable,resizable and closable Window)
             </div>
-            <button id="close-btn">x</button>
+            <img src="./assets/min_btn.svg" id="min-btn">
+            <img src="./assets/close_btn.svg" id="close-btn">
         </div>
 
         <script src="./renderer.js">
