--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     </head>
     <body>
         <div id="title-bar">
+            <div id="title">Hello</div>
             <img src="./assets/min_btn.svg" id="min-btn">
             <img src="./assets/close_btn.svg" id="close-btn">
         </div>
