dark mode and disable resizable

--- a/index.html
+++ b/index.html
@@ -6,11 +6,17 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <div id="title-bar">
-            <div id="title">Hello</div>
-            <img src="./assets/min_btn.svg" id="min-btn">
-            <img src="./assets/close_btn.svg" id="close-btn">
+        <div id="container">
+            <div id="title-bar">
+                <div id="title">Hello</div>
+                <img src="./assets/min_btn.svg" id="min-btn">
+                <img src="./assets/close_btn.svg" id="close-btn">
+            </div>
+            <div id="content">
+                
+            </div>
         </div>
+        
 
         <script src="./renderer.js">
         </script>
