solve many problems and enable resizement

--- a/index.html
+++ b/index.html
@@ -5,20 +5,22 @@
         <title>My Electron Frameless Window</title>
         <link rel="stylesheet" href="style.css">
     </head>
+
     <body>
         <div id="container">
-            <div id="content">
-                
-            </div>
             <div id="title-bar">
                 <div id="title">Hello</div>
                 <img src="./assets/min_btn.svg" id="min-btn">
                 <img src="./assets/close_btn.svg" id="close-btn">
             </div>
+
+            <div id="content">
+                <p>
+                    Hello
+                </p>
+            </div>
         </div>
         
-
-        <script src="./button.js">
-        </script>
+        <script src="./button.js"></script>
     </body>
 </html>
