change some text

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
             <div id="content">
                 <p>
-                    Hello
+                    Code like <strong id="that">that</strong> not like <strong id="sh">sh*t</strong>
                 </p>
             </div>
         </div>
